main / fix dark mode for favorite item

--- a/src/components/FavoriteItem.css
+++ b/src/components/FavoriteItem.css
@@ -11,3 +11,7 @@
   display: flex;
   flex-direction: column;
 }
+
+.text-bg-dark {
+  color: aqua;
+}
